--- a/deployment/src/index.css
+++ b/deployment/src/index.css
@@ -6,7 +6,47 @@
     cursor: pointer
 }
 
+.bold {
+    font-weight: bold;
+}
+
+.enlarge {
+    font-size: 1.2em;
+}
+
 .emphasis {
     color: red;
     font-weight: bold;
+}
+
+.primaryColorBg {
+    background-color: rgb(107, 106, 210) !important;
+}
+
+.primaryColorBgHover:hover {
+    background-color: rgb(107, 146, 210) !important;
+}
+
+.primaryColor {
+    color: rgb(107, 106, 210) !important;
+}
+
+.primaryColorHover:hover {
+    color: rgb(107, 146, 210) !important;
+}
+
+.pad {
+    padding: 0.7em;
+}
+
+.selectable {
+    text-decoration: underline;
+}
+
+.selectable:hover {
+    cursor: pointer;
+}
+
+.cardBtn {
+    width: 100%;
 }
