--- a/deployment/src/index.css
+++ b/deployment/src/index.css
@@ -21,10 +21,15 @@
 
 .primaryColorBg {
     background-color: rgb(107, 106, 210) !important;
+    border-color: rgba(0,0,0,0) !important;
 }
 
 .primaryColorBgHover:hover {
     background-color: rgb(107, 146, 210) !important;
+}
+
+.largeBtnEffect:hover {
+    border-radius: 15px;
 }
 
 .primaryColor {
@@ -49,4 +54,8 @@
 
 .cardBtn {
     width: 100%;
+}
+
+.round {
+    border-radius: 50%;
 }
